// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeavePeriodContinuous renders the page with bonding leave content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={null}
    label="Do you need to take off work completely for a period of time (continuous leave)?"
    name="has_continuous_leave_periods"
    onChange={[Function]}
    type="radio"
    value=""
  />
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "leave_details.continuous_leave_periods",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Heading
      level="2"
      size="1"
    >
      Enter the start and end dates for your continuous leave.
    </Heading>
    <Lead>
      <Trans
        i18nKey="pages.claimsLeavePeriodContinuous.datesLead"
        tOptions={
          Object {
            "context": "bonding",
          }
        }
      />
    </Lead>
    <InputDate
      dayLabel="Day"
      example="MM / DD / YYYY"
      label="First day of leave"
      monthLabel="Month"
      name="leave_details.continuous_leave_periods[0].start_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
    <InputDate
      dayLabel="Day"
      example="MM / DD / YYYY"
      label="Last day of leave"
      monthLabel="Month"
      name="leave_details.continuous_leave_periods[0].end_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeavePeriodContinuous renders the page with bonding leave content 2`] = `
Array [
  "If you have already taken some or all of your family leave in 2021, tell us the first day you missed work this year, and the last day you expect to be on leave.",
  <br
    key="br-1"
  />,
  <br
    key="br-2"
  />,
  "Your paid leave must end before the child’s first birthday or the one year anniversary of when they arrived in your home (for foster care and adoption).",
]
`;

exports[`LeavePeriodContinuous renders the page with medical leave content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <Alert
    neutral={true}
    state="info"
  >
    <Trans
      components={
        Object {
          "caregiver-certification-form-link": <a
            href="https://www.mass.gov/family-caring-form"
            rel="noopener"
            target="_blank"
          />,
          "healthcare-provider-form-link": <a
            href="https://www.mass.gov/medical-leave-form"
            rel="noopener"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.claimsLeavePeriodContinuous.needDocumentAlert"
      tOptions={
        Object {
          "context": "medical",
        }
      }
    />
  </Alert>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint="Your answer must match the Certification of Your Serious Health Condition."
    label="Do you need to take off work completely for a period of time (continuous leave)?"
    name="has_continuous_leave_periods"
    onChange={[Function]}
    type="radio"
    value=""
  />
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "leave_details.continuous_leave_periods",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Heading
      level="2"
      size="1"
    >
      Enter the start and end dates for your continuous leave.
    </Heading>
    <Lead>
      <Trans
        i18nKey="pages.claimsLeavePeriodContinuous.datesLead"
        tOptions={
          Object {
            "context": "medical",
          }
        }
      />
    </Lead>
    <InputDate
      dayLabel="Day"
      example="MM / DD / YYYY"
      label="First day of leave"
      monthLabel="Month"
      name="leave_details.continuous_leave_periods[0].start_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
    <InputDate
      dayLabel="Day"
      example="MM / DD / YYYY"
      label="Last day of leave"
      monthLabel="Month"
      name="leave_details.continuous_leave_periods[0].end_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeavePeriodContinuous renders the page with medical leave content 2`] = `
Array [
  "You will need a completed ",
  <a
    href="https://www.mass.gov/medical-leave-form"
    key="1"
    rel="noopener"
    target="_blank"
  >
    Certification of Your Serious Health Condition
  </a>,
  " for this section.",
]
`;

exports[`LeavePeriodContinuous renders the page with medical leave content 3`] = `
Array [
  "If you have already taken leave for this condition in 2021, tell us the first day you missed work this year, and the last day you expect to be on leave.",
  <br
    key="br-1"
  />,
  <br
    key="br-2"
  />,
  "Your answer must match the continuous leave period start and end dates in the Certification of Your Serious Health Condition.",
]
`;
